# const-secret

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.cargo-husky/hooks/: pre-commit
.github/actions/: action.yml
.github/workflows/: pages.yml  qc.yml  release.yml
benches/: alignment_comparison.rs  concurrent_access.rs  drop_strategies.rs  rc4_single_threaded.rs  xor_single_threaded.rs
docs/: index.html
docs/api/: crates.js  help.html  settings.html  src-files.js
docs/api/const_secret/: all.html  index.html  sidebar-items.js  struct.ByteArray.html  struct.Encrypted.html  struct.StringLiteral.html  trait.Algorithm.html
docs/api/const_secret/align/: index.html  sidebar-items.js  struct.Aligned16.html  struct.Aligned8.html
docs/api/const_secret/drop_strategy/: index.html  sidebar-items.js  struct.NoOp.html  struct.Zeroize.html  trait.DropStrategy.html
docs/api/const_secret/rc4/: index.html  sidebar-items.js  struct.Rc4.html  struct.ReEncrypt.html
docs/api/const_secret/xor/: index.html  sidebar-items.js  struct.ReEncrypt.html  struct.Xor.html
docs/api/search.index/: 275d84e92e8a.js  29eec22d6b86.js  35766a15bc5e.js  785186473498.js  root.js
docs/api/search.index/crateNames/: ad8eb64a5c10.js
docs/api/search.index/desc/: 90755998e129.js
docs/api/search.index/entry/: b79bda648943.js
docs/api/search.index/function/: d842fd522c65.js
docs/benchmarks/: .gitkeep
docs/benchmarks/report/: index.html
examples/: debug_drop.rs
src/: align.rs  drop_strategy.rs  dtor.rs  lib.rs  rc4.rs  xor.rs
(+387 files in other folders)
